CMake: small improvment on Ibex affine detection

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,12 @@ cmake_minimum_required (VERSION 3.5.1)
 
 project (IBEX_OPTIM_EXTRA VERSION 1.0 LANGUAGES CXX)
 
+# If IBEX_AFFINE_DIR was given on the command-line and not in the environment,
+# set it as an environment variable.
+# Enable the usage of 'cmake -DIBEX_AFFINE_DIR=<path> ...'
+if (NOT DEFINED ENV{IBEX_AFFINE_DIR} AND DEFINED IBEX_AFFINE_DIR)
+  set (ENV{IBEX_AFFINE_DIR} "${IBEX_AFFINE_DIR}")
+endif ()
 find_package (IBEX_AFFINE 1.0 REQUIRED)
 message (STATUS "Found Ibex version ${IBEX_VERSION}")
 ibex_init_common () # Ibex should have installed this function
